Update index.html no Titulo

--- a/Projetos acabados/We Care/index.html
+++ b/Projetos acabados/We Care/index.html
@@ -30,7 +30,7 @@
             <section>
 
                 <h1>We Care</h1>
-                <h2>Sobre seu animal de Estimação</h2>
+                <h2>Sobre seu animal de Estimação com voê!</h2>
                 <p>Lorem ipsum dolor sit amet consecteturad<br>
                     cing elit aenean a justo quis mauris hendri<br>
                     pellentesque eget at ipsumuis cursusturpi.</p>
