--- a/Projetos acabados/We Care/index.html
+++ b/Projetos acabados/We Care/index.html
@@ -23,23 +23,23 @@
 
     </header>
 
-        <img src="./img/Illustration 2.svg" alt="we-care-logo" class="logo-image">
+    <img src="./img/Illustration 2.svg" alt="we-care-logo" class="logo-image">
 
-        <main>
+    <main>
 
-            <section>
+        <section>
 
-                <h1>We Care</h1>
-                <h2>Sobre seu animal de Estimação com voê!</h2>
-                <p>Lorem ipsum dolor sit amet consecteturad<br>
-                    cing elit aenean a justo quis mauris hendri<br>
-                    pellentesque eget at ipsumuis cursusturpi.</p>
+            <h1>We Care</h1>
+            <h2>Sobre seu animal de Estimação com você!</h2>
+            <p>Lorem ipsum dolor sit amet consecteturad<br>
+                cing elit aenean a justo quis mauris hendri
+                pellentesque eget at ipsumuis cursusturpi.</p>
 
-                <button class="botton-main">Saiba Mais</button>
+            <button class="botton-main">Saiba Mais</button>
 
-            </section>
+        </section>
 
-        </main>
+    </main>
 </body>
 
 </html>
