--- a/Projetos acabados/We Care/index.html
+++ b/Projetos acabados/We Care/index.html
@@ -33,7 +33,7 @@
             <h2>Sobre seu animal de Estimação com você!</h2>
             <p>Lorem ipsum dolor sit amet consecteturad<br>
                 cing elit aenean a justo quis mauris hendri
-                pellentesque eget at ipsumuis cursusturpi.</p>
+                pellentesque eget at ipsumuis cursusturpi. Aqui tudo funciona</p>
 
             <button class="botton-main">Saiba Mais</button>
 
